# python-fastapi-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci_python.yml
app/: app.py  logging_config.py
